# Generative-Economic-Modeling

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
bld/data/BM/: A.pkl  AB.pkl  AC.pkl  B.pkl  BC.pkl  C.pkl  F.pkl
bld/models/BM/: surrogate_ABC.pkl  surrogate_C.pkl  surrogate_F.pkl
bld/models/BM/surrogate_ABC/: surrogate.pkl
bld/models/BM/surrogate_AC/: surrogate.pkl
bld/models/BM/surrogate_BC/: surrogate.pkl
bld/models/BM/surrogate_C/: surrogate.pkl
bld/models/BM/surrogate_F/: surrogate.pkl
docs/: .gitignore  _quarto.yml  api.qmd  bm-cleanup-plan.md  bm-example.qmd  index.qmd
docs/examples/: _metadata.yml  analysis_BM.ipynb  analysis_BM_colab.ipynb
examples/: analysis_BM.ipynb  analysis_BM.py  analysis_BM_colab.ipynb  analysis_BM_colab.py
src/: BM.py  analysis.py  analysis_helpers.py  data_pipeline.py  distributions.py  helpers.py  io_utils.py  plots.py  structures.py  surrogate.py
src/gem/: BM.py  __init__.py  helpers.py  plots.py  structures.py  surrogates.py
src/gem/core/: __init__.py
src/gem/data/: __init__.py  helpers.py  io_utils.py
src/gem/model/: __init__.py  bm.py
src/gem/plotting/: __init__.py  plots.py
